build: change enums to examples (#200)
* build: change enums to examples
- enums are too restrictive for update masks
- examples are more flexible and give recommended values

* docs: clarify update mask examples

---------

Co-authored-by: Dion Low <dion@withampersand.com>

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -282,8 +282,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    enum: ["appName", "name"]
-                  description: "Array of field paths specifying which fields to update."
+                  description: "Array of field paths specifying which fields to update. Allowed values: appName, name"
+                  example: ["appName", "name"]
                 project:
                   type: object
                   properties:
@@ -498,8 +498,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    enum: ["externalRef", "clientId", "clientSecret", "provider", "scopes"]
-                  description: "Array of field paths specifying which fields to update."
+                  description: "Array of field paths specifying which fields to update. Allowed values: externalRef, clientId, clientSecret, provider, scopes"
+                  example: ["externalRef", "clientId"]
                 providerApp:
                   type: object
                   properties:
@@ -1140,8 +1140,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    enum: ["config", "connectionId", "config.revisionId", "config.createdBy", "config.content.read.objects.*", "config.content.write.objects.*", "config.content.write.objects", "config.content.subscribe.objects.*"]
-                  description: "Array of field paths specifying which fields to update. `*` indicates an object name, for example `config.content.read.objects.*` means that you can use the update mask `config.content.read.objects.contact`."
+                  description: "Array of field paths specifying which fields to update. Allowed values: config, connectionId, config.revisionId, config.createdBy, config.content.read.objects.*, config.content.write.objects.*, config.content.subscribe.objects.*. The * operator allows you to specify any object name (e.g., 'config.content.read.objects.contacts' or 'config.content.write.objects.leads')"
+                  example: ["config", "config.content.read.objects.contacts", "config.content.write.objects.leads"]
                 installation:
                   type: object
                   properties:
@@ -2163,8 +2163,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    enum: ["name", "metadata.url", "metadata.headers"]
-                  description: "Array of field paths specifying which fields to update."
+                  description: "Array of field paths specifying which fields to update. Allowed values: name, metadata.url, metadata.headers"
+                  example: ["name", "metadata.url"]
                 destination:
                   type: object
                   properties:
@@ -2357,8 +2357,8 @@ paths:
                   type: array
                   items:
                     type: string
-                    enum: ["label"]
-                  description: "Array of field paths specifying which fields to update."
+                  description: "Array of field paths specifying which fields to update. Allowed values: label"
+                  example: ["label"]
                 org:
                   type: object
                   properties:
@@ -3557,8 +3557,8 @@ components:
           type: array
           items:
             type: string
-            enum: ["providerWorkspaceRef", "providerMetadata", "apiKey", "basicAuth", "oauth2ClientCredentials", "oauth2PasswordCredentials"]
-          description: "Array of field paths specifying which fields to update."
+          description: "Array of field paths specifying which fields to update. Allowed values: providerWorkspaceRef, providerMetadata, apiKey, basicAuth, oauth2ClientCredentials, oauth2PasswordCredentials"
+          example: ["providerWorkspaceRef", "providerMetadata"]
         connection:
           $ref: "#/components/schemas/ConnectionRequest"
     ConnectionRequest:
@@ -3884,8 +3884,8 @@ components:
           type: array
           items:
             type: string
-            enum: ["active", "label", "scopes"]
-          description: "Array of field paths specifying which fields to update."
+          description: "Array of field paths specifying which fields to update. Allowed values: active, label, scopes"
+          example: ["active", "label"]
         apiKey:
           type: object
           properties:
@@ -4145,9 +4145,11 @@ components:
         - Use dot notation for nested objects: `parent.child.field`
         - Escape special characters: `field\.with\.dots`, `field\:with\:colons`
         - Array elements not directly addressable
-        - Only explicitly allowed fields can be updated
+        - Object names can be specified directly (e.g., "config.content.read.objects.contacts")
+        - The * operator in paths like "config.content.read.objects.*" allows you to specify any object name
+          - Example: "config.content.read.objects.*" pattern allows "config.content.read.objects.contacts", "config.content.read.objects.leads", etc.
 
-      example: ["name", "config.revision", "metadata.tags"]
+      example: ["name", "config.content.read.objects.contacts", "config.content.write.objects.leads"]
     CreateJWTKeyRequest:
       type: object
       required:
