add operationId to the webhook

--- a/webhook/webhook.yaml
+++ b/webhook/webhook.yaml
@@ -24,6 +24,7 @@ components:
         - installationUpdateTime
         - objectName
         - resultInfo
+        - operationId
       properties:
         projectId:
           description: The Ampersand Project ID.
@@ -51,6 +52,11 @@ components:
           description:
             The name of the object. If there is a mapping for this object, this is the mapped name.
             Otherwise, it is the name used by the SaaS provider API.
+          type: string
+        operationId:
+          description:
+            The ID of the operation that triggered the webhook. This is used to correlate the
+            webhook message with the operation in the Ampersand system.
           type: string
         rawObjectName:
           description: If there is a mapping for this object, this is the name used by the SaaS provider API.
