--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -195,8 +195,8 @@ components:
           enum: [always]
         watchFieldsAuto:
           type: string
-          description: If all, the integration will watch all fields for updates.
-          enum: [all]
+          description: If `all`, the integration will watch all fields for updates. If `selected`, the integration will watch only the fields that are selected by the user. If `inheritFieldsAndMapping` is true for Subscribe action, the integration will watch the selected fields from read action that are selected by the user.
+          enum: [all, selected]
           example: all
         requiredWatchFields:
           type: array
@@ -206,11 +206,6 @@ components:
             example:
               - name
               - domain
-        inheritSelectedOptionalFields:
-          type: boolean
-          description: If true, the integration also watch for user selected optional fields from the read object.
-          example: true
-
     DeleteEvent:
       type: object
       properties:
