--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1156,6 +1156,7 @@ paths:
                     - config.createdBy
                     - config.content.read.objects.<object-name>
                     - config.content.write.objects.<object-name>
+                    - config.content.write.objects
                     - config.content.subscribe.objects.<object-name>
                     
                     The `<object-name>` annotation means you to specify any object name (e.g.'config.content.read.objects.contacts' or 'config.content.write.objects.leads')
