back tiks for better visibility on enum

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -134,7 +134,7 @@ components:
           $ref: '#/components/schemas/Delivery'
         enabled:
           type: string
-          description: If set to always, the integration will automatically install upon user connection and skip the user field selection step. 
+          description: If set to `always`, the integration will automatically install upon user connection and skip the user field selection step. 
           enum: [always]
           x-go-type-skip-optional-pointer: true
 
