--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1158,6 +1158,7 @@ paths:
                     - config.content.write.objects.<object-name>
                     - config.content.write.objects
                     - config.content.subscribe.objects.<object-name>
+                    - config.content.proxy.enabled
                     
                     `<object-name>` means you can specify any object name.
                   example: ["config.content.read.objects.contacts", "config.content.write.objects.leads"]
