add update note for subscribe

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1116,6 +1116,8 @@ paths:
       summary: Update an installation
       operationId: updateInstallation
       tags: ["Installation"]
+      description: |
+        NOTE: Updating an installation with the Subscribe action typically takes 1–2 minutes, but it may take up to 10 minutes to take effect due to delays in the provider’s system.
       parameters:
         - name: projectIdOrName
           in: path
