fix: add missing orgUpdate and invite object definitions to OpenAPI schema

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -4339,6 +4339,38 @@ components:
           example:
             active: false
             name: "updated-key-name"
+    orgUpdate:
+      title: Organization Update Request
+      type: object
+      required:
+        - updateMask
+        - org
+      properties:
+        updateMask:
+          type: array
+          items:
+            type: string
+          description: |
+            Array of field paths specifying which fields to update. Allowed values include:
+            - label
+          example: ["label"]
+        org:
+          type: object
+          properties:
+            label:
+              type: string
+              description: The organization label.
+              example: "org-123"
+    invite:
+      title: Invite Request
+      type: object
+      required:
+        - invitedEmail
+      properties:
+        invitedEmail:
+          type: string
+          description: The email address of the user to invite.
+          example: "user@example.com"
   securitySchemes:
     APIKeyHeader:
       type: apiKey
