make schedule optioanl pointer

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -66,10 +66,12 @@ components:
           type: string
           description: The schedule for reading the object, in cron syntax.
           example: '*/15 * * * *'
+          x-go-type-skip-optional-pointer: true
         destination:
           description: The name of the destination that the result should be sent to.
           example: accountWebhook
           type: string
+          x-go-type-skip-optional-pointer: true
         selectedFields:
           type: object
           description:
